--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,13 +3,24 @@ body {
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
-
+/* HEADINGS */
 .header--main {
     font-weight: normal;
     font-size: 50px;
     color: #ffffff; 
 }
 
+.header--secondary {
+    color: #ffffff;
+    font-weight: normal;
+    font-size: 42px;
+}
+
+.header--sub-header {
+    color: gray;
+    font-size: 21px;
+}
+/* LINKS */
 .link--cta {
     font-size: 16px;
     color: aquamarine;
